--- a/ci-scripts/docker-compose/gnb-ci-testbed/docker-compose.yml
+++ b/ci-scripts/docker-compose/gnb-ci-testbed/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         environment:
             USE_B2XX: 'yes'
             USE_VOLUMED_CONF: True
-            USE_ADDITIONAL_OPTIONS: --sa --continuous-tx --log_config.global_log_options level,nocolor,time,line_num,function
+            USE_ADDITIONAL_OPTIONS: --sa --continuous-tx --log_config.global_log_options level,nocolor,time,line_num,function --opt.type wireshark
         volumes:
             -  /dev/bus/usb/:/dev/bus/usb/
             - ./gnb-n77.conf:/opt/oai-gnb/etc/mounted.conf
