--- a/charts/oai-5g-core/oai-spgwu-tiny/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/templates/deployment.yaml
@@ -15,15 +15,38 @@ spec:
     metadata:
       labels:
         {{- include "oai-spgwu-tiny.selectorLabels" . | nindent 8 }}
-    {{- if .Values.multus.create }}
+    {{- if .Values.multus.n3Interface.create }}
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-n3-net1"
+                 "name": "{{ .Chart.Name }}-n3",
+                 "interface": "n3"
                 {{- if .Values.multus.defaultGateway }}
                  ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
                 {{- end }}
-          }]
+                {{- if .Values.multus.n3Interface.Gateway }}
+                ,"gateway": "{{ .Values.multus.n3Interface.Gateway }}"
+                {{- end }}
+          }
+          {{- if .Values.multus.n4Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-n4",
+                 "interface": "n4"
+                {{- if .Values.multus.n4Interface.Gateway }}
+                ,"gateway": "{{ .Values.multus.n4Interface.Gateway }}"
+                {{- end }}
+          }
+          {{- end }}
+          {{- if .Values.multus.n6Interface.create }}
+          ,{
+                 "name": "{{ .Chart.Name }}-n6",
+                 "interface": "n6"
+                {{- if .Values.multus.n6Interface.Gateway }}
+                ,"gateway": "{{ .Values.multus.n6Interface.Gateway }}"
+                {{- end }}
+          }
+          {{- end }}
+          ]
     {{- end }}
     spec:
       securityContext:
