--- a/charts/oai-5g-ran/oai-gnb-du/templates/multus.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/templates/multus.yaml
@@ -20,6 +20,9 @@ spec:
                         {{- end }}
                 }
         ]
+        {{- if .Values.multus.f1Interface.routes }}
+        ,"routes":  {{- .Values.multus.f1Interface.routes | toJson }}
+        {{- end }}
       }
     }'
 {{- end }}
