--- a/charts/oai-5g-core/oai-amf/templates/multus.yaml
+++ b/charts/oai-5g-core/oai-amf/templates/multus.yaml
@@ -1,22 +1,26 @@
 ---
-{{- if .Values.multus.create }}
+{{- if .Values.multus.n2Interface.create }}
 apiVersion: "k8s.cni.cncf.io/v1"
-kind: NetworkAttachmentDefinition
+kind: NetworkAttachmentDefinition 
 metadata:
-  name: {{ .Chart.Name }}-n2-net1
+  name: {{ .Chart.Name }}-n2
 spec:
-  config: '{
-      "cniVersion": "0.3.0",
+  config: '{ 
+      "cniVersion": "0.3.1",
       "type": "macvlan",
-      "master": {{- cat .Values.multus.hostInterface | nospace | quote }},
+      "master": {{- cat .Values.multus.n2Interface.hostInterface | nospace | quote }},
       "mode": "bridge",
       "ipam": {
         "type": "static",
         "addresses": [
                 {
-                        "address": {{- cat .Values.multus.n2IPadd "/" .Values.multus.n2Netmask | nospace | quote }}
+                        "address": {{- cat .Values.multus.n2Interface.Ipadd "/" .Values.multus.n2Interface.Netmask | nospace | quote }}
                 }
         ]
+        {{- if .Values.multus.n2Interface.routes }}
+        ,"routes":  {{- .Values.multus.n2Interface.routes | toJson }}
+        {{- end }}
       }
     }'
 {{- end }}
+---
