--- a/charts/oai-5g-core/oai-amf/values.yaml
+++ b/charts/oai-5g-core/oai-amf/values.yaml
@@ -33,19 +33,24 @@ podSecurityContext:
 
 ## Change these ip-addresses according to your environment
 multus:
-  create: false
-  n2IPadd: "172.21.6.94"
-  n2Netmask: "22"
-  ## If you don't have a gateway leave the field empty or commented
-  defaultGateway: "172.21.7.254" 
-  hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  ## If you don't want to add a default route in your pod then leave this field empty
+  defaultGateway: "172.21.7.254"
+  n2Interface:
+    create: false
+    Ipadd: "172.21.6.94"
+    Netmask: "22"
+    ## If you do not have a gateway leave the field empty
+    Gateway:
+    ## If you do not want to add any routes in your pod then leave this field empty
+    routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}]
+    hostInterface: "bond0" # Interface of the host machine on which this pod will be scheduled
 
 ## Incase the pod is not able to resolve the FQDN of other network 
 ## functions example nrf then you can disable useFqdnDns feature this way AMF will talk to other network functions using their ip-address. 
 
 config:
   logLevel: "debug" #info/debug/error
-  amfInterfaceNameForNGAP: "eth0" # If multus creation is true then net1 else eth0
+  amfInterfaceNameForNGAP: "eth0" # If multus.n2Interface.create is true then n2 else eth0
   amfInterfaceNameForSBI: "eth0"  # Service based interface
   amfInterfaceSBIHTTPPort: 80  # Service based interface
   amfInterfaceSBIHTTP2Port: 8080  # Service based interface
