--- a/charts/oai-5g-core/oai-smf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-smf/templates/deployment.yaml
@@ -15,13 +15,17 @@ spec:
     metadata:
       labels:
         {{- include "oai-smf.selectorLabels" . | nindent 8 }}
-    {{- if .Values.multus.create }}
+    {{- if .Values.multus.n4Interface.create }}
       annotations:
         k8s.v1.cni.cncf.io/networks: >-
           [{
-                 "name": "{{ .Chart.Name }}-n4-net1"
+                 "name": "{{ .Chart.Name }}-n4",
+                 "interface": "n4"
                 {{- if .Values.multus.defaultGateway }}
                  ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
+                {{- end }}
+                {{- if .Values.multus.n4Interface.Gateway }}
+                ,"gateway": "{{ .Values.multus.n4Interface.Gateway }}"
                 {{- end }}
           }]
     {{- end }}
