--- a/charts/oai-5g-core/oai-smf/templates/multus.yaml
+++ b/charts/oai-5g-core/oai-smf/templates/multus.yaml
@@ -1,23 +1,26 @@
 ---
-{{- if .Values.multus.create }}
+{{- if .Values.multus.n4Interface.create }}
 apiVersion: "k8s.cni.cncf.io/v1"
-kind: NetworkAttachmentDefinition
+kind: NetworkAttachmentDefinition 
 metadata:
-  name: {{ .Chart.Name }}-n4-net1
+  name: {{ .Chart.Name }}-n2
 spec:
-  config: '{
-      "cniVersion": "0.3.0",
+  config: '{ 
+      "cniVersion": "0.3.1",
       "type": "macvlan",
-      "master": {{- cat .Values.multus.hostInterface | nospace | quote }},
+      "master": {{- cat .Values.multus.n4Interface.hostInterface | nospace | quote }},
       "mode": "bridge",
       "ipam": {
         "type": "static",
         "addresses": [
                 {
-                        "address": {{- cat .Values.multus.n4IPadd "/" .Values.multus.n4Netmask | nospace | quote }},
-                        "gateway": "{{ .Values.multus.n4Gateway }}"
+                        "address": {{- cat .Values.multus.n4Interface.Ipadd "/" .Values.multus.n4Interface.Netmask | nospace | quote }}
                 }
         ]
+        {{- if .Values.multus.n4Interface.routes }}
+        ,"routes":  {{- .Values.multus.n4Interface.routes | toJson }}
+        {{- end }}
       }
     }'
 {{- end }}
+---
