--- a/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
@@ -30,19 +30,45 @@ service:
 
 # create an extra interface for N3 incase the gNB is outside the cluster network or there is a need to have dedicated interface for N3
 ## Change these ip-addresses according to your environment
-multus:
-  create: false
-  n3Ip: "172.21.6.95"
-  n3Netmask: "22"
-  ## If you don't have a gateway leave the field empty or commented
-  defaultGateway: "172.21.7.254"
-  hostInterface: "bond0"
+## N4, N6 are optional only if you want that UPF uses different subnets for different 3gpp interfaces. 
 
+multus:
+  ## If you don't want to add a default route in your pod then leave this field empty
+  defaultGateway: "172.21.7.254"
+  n3Interface:
+    create: false
+    Ipadd: "172.21.6.95"
+    Netmask: "22"
+    ## If you do not have a gateway leave the field empty
+    Gateway: "172.21.7.254"
+    ## If you do not want to add any routes in your pod then leave this field empty
+    routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
+    hostInterface: "bond0"
+  n4Interface:
+    create: false
+    Ipadd: "172.21.16.89"
+    Netmask: "22"
+    ## If you do not have a gateway leave the field empty
+    Gateway: "172.21.19.254"
+    ## If you do not want to add any routes in your pod then leave this field empty
+    routes: 
+    hostInterface: "bond1"
+  n6Interface:
+    create: false
+    Ipadd: "172.21.8.80"
+    Netmask: "22"
+    ## If you do not have a gateway leave the field empty
+    Gateway: "172.21.11.254"
+    ## If you do not want to add any routes in your pod then leave this field empty
+    routes: 
+    hostInterface: "bond2"
+
+#NOTE: If the interface you selected for n6If is wrong then traffic will not be routed towards internet
 config:
   fqdn: "oai-spgwu-tiny-svc"
-  n3If: "eth0"  # net1 if gNB is outside the cluster network and multus creation is true else eth0
-  n4If: "eth0" # use for SMF communication
-  n6If: "eth0"  # net1 if gNB is outside the cluster network and multus creation is true else eth0 (important because it sends the traffic towards internet)
+  n3If: "eth0"  # n3 if multus.n3Interface.create is true
+  n4If: "eth0" # n4 if multus.n4Interface.create is true
+  n6If: "eth0"  # n6 multus.n6Interface.create is true  
   threadsN3Ul: "1"      #Multi threading is not properly supported
   threadsN6Dl: "1"      #Multi threading is not properly supported
   threadsN6Prio: 99       
