--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -25,27 +25,31 @@ serviceAccount:
 ## In case you are using 1 ip-address for all 3 logical interfaces then please change it template/configmap.yaml
 ## Change these ip-addresses according to your environment
 multus:
+  #if defaultGateway is empty then it will be removed
   defaultGateway: "172.21.7.254"
   e1Interface:
     create: true
     IPadd: "172.21.6.91"
     Netmask: "22"
-    # if gatway is commented then it will be remove
-    #Gateway: "172.21.7.254"
+    # if gatway is empty then it will be removed
+    Gateway: 
+    #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
     create: true
     IPadd: "172.21.6.97"
     Netmask: "22"
-    # if gatway is commented then it will be remove
-    #Gateway: "172.21.7.254"
+    # if gatway is empty then it will be removed
+    Gateway: 
+    #routes: 
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   f1uInterface:
     create: true
     IPadd: "172.21.6.93"
     Netmask: "22"
-    # if gatway is commented then it will be remove
-    #Gateway: "172.21.7.254"
+    # if gatway is empty then it will be removed
+    Gateway: 
+    #routes:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
 ## configuration file is in template/config.yaml 
