--- a/charts/oai-5g-ran/oai-gnb/templates/multus.yaml
+++ b/charts/oai-5g-ran/oai-gnb/templates/multus.yaml
@@ -3,7 +3,7 @@
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition 
 metadata:
-  name: {{ .Chart.Name }}-net1
+  name: {{ .Chart.Name }}-n2
 spec:
   config: '{ 
       "cniVersion": "0.3.1",
@@ -15,11 +15,11 @@ spec:
         "addresses": [
                 {
                         "address": {{- cat .Values.multus.n2Interface.IPadd "/" .Values.multus.n2Interface.Netmask | nospace | quote }}
-                        {{- if .Values.multus.n2Interface.Gateway }}
-                        ,"gateway": {{- cat .Values.multus.n2Interface.Gateway | nospace | quote }}
-                        {{- end }}
                 }
         ]
+        {{- if .Values.multus.n2Interface.routes }}
+        ,"routes":  {{- .Values.multus.n2Interface.routes | toJson }}
+        {{- end }}
       }
     }'
 {{- end }}
@@ -28,7 +28,7 @@ spec:
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition 
 metadata:
-  name: {{ .Chart.Name }}-net2
+  name: {{ .Chart.Name }}-n3
 spec:
   config: '{ 
       "cniVersion": "0.3.1",
@@ -40,11 +40,11 @@ spec:
         "addresses": [
                 {
                         "address": {{- cat .Values.multus.n3Interface.IPadd "/" .Values.multus.n3Interface.Netmask | nospace | quote }}
-                        {{- if .Values.multus.n3Interface.Gateway }}
-                        ,"gateway": {{- cat .Values.multus.n3Interface.Gateway | nospace | quote }}
-                        {{- end }}
                 }
         ]
+        {{- if .Values.multus.n3Interface.routes }}
+        ,"routes":  {{- .Values.multus.n3Interface.routes | toJson }}
+        {{- end }}
       }
     }'
 {{- end }}
@@ -53,7 +53,7 @@ spec:
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition 
 metadata:
-  name: {{ .Chart.Name }}-net3
+  name: {{ .Chart.Name }}-ru
 spec:
   config: '{ 
       "cniVersion": "0.3.1",
@@ -68,9 +68,6 @@ spec:
         "addresses": [
                 {
                         "address": {{- cat .Values.multus.ruInterface.IPadd "/" .Values.multus.ruInterface.Netmask | nospace | quote }}
-                        {{- if .Values.multus.ruInterface.Gateway }}
-                        ,"gateway": {{- cat .Values.multus.n2Interface.Gateway | nospace | quote }}
-                        {{- end }}
                 }
         ]
       }
