--- a/charts/oai-5g-ran/oai-gnb/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb/values.yaml
@@ -31,31 +31,39 @@ serviceAccount:
 
 ## NOTE: To use these charts with USRP B210 you need to modify and mount usb from the host. 
 ## Change these ip-addresses according to your environment
-# Multus interface name
+
 
 multus:
-  # if default gatway is commented or left blank then it will be remove
+  # if default gatway is empty then it will be removed
   defaultGateway: "172.21.7.254"
   n2Interface:
     create: false
+    # #name inside the pod is hardcoded right now
+    # name: "n2"
     IPadd: "172.21.6.90"
     Netmask: "22"
-    # if gatway is commented then it will be remove
-    #Gateway: "172.21.7.254"
+    # if gatway is empty then it will be removed
+    Gateway: "172.21.7.254"
+    #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
     create: false
     IPadd: "172.21.6.91"
+    # #name inside the pod is hardcoded right now
+    # name: "n3"
     Netmask: "22"
-    # if gatway is commented then it will be remove
-    #Gateway: "172.21.7.254"
+    # if gatway is empty then it will be removed
+    Gateway: "172.21.7.254"
+    #routes:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   ruInterface:            #Only needed if using a ethernet based RU/USRP
     create: false
     IPadd: "192.168.80.90"
+    # #name inside the pod is hardcoded right now
+    # name: "ru"
     Netmask: "24"
-    # if gatway is commented then it will be remove
-    #Gateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
+    # if gatway is commented then it will be removed
+    Gateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
     ## The value must be [0, master's MTU]. If commented it will masters MTU
     #mtu: 1500
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
@@ -80,10 +88,10 @@ config:
   nssaiSd0: "ffffff"    #values in hexa-decimal format
   #entrypoint.sh tries to resolve the amfHost name if the resolution did not work gNB will not start
   amfIpAddress: "oai-amf-svc"  # amf ip-address or service-name oai-amf-svc or 172.21.6.94
-  gnbNgaIfName: "eth0"            # net1 in case multus create is true that means another interface is created for ngap interface, n2 to communicate with amf
-  gnbNgaIpAddress: "status.podIP" # n2.IPadd in case multus create is true
-  gnbNguIfName: "eth0"   #net2/net1 in case multus create is true gtu interface for upf/spgwu
-  gnbNguIpAddress: "status.podIP" # n3.IPadd in case multus create is true
+  gnbNgaIfName: "eth0"            # if multus.n2Interface.create is true then use n2 
+  gnbNgaIpAddress: "status.podIP" # if multus.n2Interface.create is true then use multus.n2Interface.Ipadd 
+  gnbNguIfName: "eth0"   #if multus.n3Interface.create is true then use n3 or you can only use 1 interface n2 or eth0 
+  gnbNguIpAddress: "status.podIP" # if multus.n3Interface.create is true then use multus.n3Interface.Ipadd or multus.n2Interface.Ipadd if you are using only 1 extra interface
   threadParallelConfig: "PARALLEL_SINGLE_THREAD"
   sdrAddrs: "serial=XXXXXXX"
 
@@ -113,16 +121,16 @@ resources:
   define: false
   limits:
     nf:
-      cpu: 100m
-      memory: 128Mi
+      cpu: 2000m
+      memory: 2Gi
     #If tcpdump container is disabled this value will not be used
     tcpdump:
-      cpu: 100m
+      cpu: 200m
       memory: 128Mi
   requests:
     nf:
-      cpu: 100m
-      memory: 128Mi
+      cpu: 2000m
+      memory: 2Gi
     #If tcpdump container is disabled this value will not be used
     tcpdump:
       cpu: 100m
