--- a/charts/oai-5g-core/oai-amf/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-amf/templates/deployment.yaml
@@ -20,7 +20,8 @@ spec:
         k8s.v1.cni.cncf.io/networks: >-
           [{
                  "name": "{{ .Chart.Name }}-n2",
-                 "interface": "n2"
+                 "interface": "n2",
+                "mac": "12:34:56:78:90:00"
                 {{- if .Values.multus.defaultGateway }}
                  ,"default-route": ["{{ .Values.multus.defaultGateway }}"]
                 {{- end }}
